<resources>
    <string name="app_name" translatable="false">Atom Note</string>

    <!-- Fragment Titles -->
    <string name="notes">Notes</string>
    <string name="deleted">Deleted</string>
    <string name="archived">Archived</string>
    <string name="settings">Settings</string>

    <!-- Menu Options -->
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="labels">Labels</string>
    <string name="delete">Delete</string>
    <string name="restore">Restore</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="delete_forever">Delete forever</string>

    <!-- Chooser dialog hints -->
    <string name="view_note">View note…</string>
    <string name="share_note">Share note…</string>

    <!-- Dialogs -->
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="make_list">Make list</string>
    <string name="take_note">Take note</string>
    <string name="add_label">Add label</string>
    <string name="export">Export</string>
    <string name="pdf" translatable="false">PDF</string>
    <string name="html" translatable="false">HTML</string>
    <string name="plain_text">Plain Text</string>
    <string name="save_to_device">Save to device</string>
    <string name="edit_label">Edit label</string>
    <string name="label_exists">Label exists</string>
    <string name="delete_label">Delete label?</string>
    <string name="create_new">No labels yet. Create one?</string>
    <string name="delete_note_forever">Delete note forever?</string>
    <string name="your_notes_associated">Your notes associated with this label will not be deleted</string>

    <!-- Lists and Notes -->
    <string name="note">Note</string>
    <string name="item">Item</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="add_item">Add Item</string>
    <string name="one_more_item">1 more item</string>
    <string name="more_items">%1$d more items</string>
    <string name="drag_handle">Drag Handle</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="strikethrough">Strikethrough</string>
    <string name="clear_formatting">Clear formatting</string>
    <string name="monospace">Monospace</string>

    <!-- Miscellaneous -->
    <string name="created">Created %1$s</string>
    <string name="saved_to_device">Saved to device</string>
    <string name="saved_to_atomenote">Saved to Atom Note</string>
    <string name="empty_note">Empty note</string>
    <string name="empty_list">Empty list</string>
    <string name="discarded_empty_note">Discarded empty note</string>
    <string name="discarded_empty_list">Discarded empty list</string>
    <string name="something_went_wrong">Something went wrong. Please try again.</string>

    <!-- Settings Page -->
    <string name="appearance">Appearance</string>

    <string name="view">View</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>

    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="follow_system">Follow system</string>

    <string name="card_type">Card type</string>
    <string name="elevated">Elevated</string>
    <string name="flat">Flat</string>

    <string name="content_density">Content density</string>
    <string name="max_items_to_display">Max items to display in list</string>
    <string name="max_lines_to_display">Max lines to display in note</string>
    <string name="show_date_created">Show date created</string>

    <string name="backup">Backup</string>
    <string name="export_notes_to_a_file">Export notes to a file</string>
    <string name="import_notes_from_a_file">Import notes from a file</string>

    <string name="about">About</string>
    <string name="libraries">Libraries</string>
    <string name="rate">Rate this app</string>

    <string name="github" translatable="false">GitHub</string>

    <string name="viewKey" translatable="false">view</string>
    <string name="listKey" translatable="false">list</string>
    <string name="gridKey" translatable="false">grid</string>

    <string name="themeKey" translatable="false">theme</string>
    <string name="lightKey" translatable="false">light</string>
    <string name="darkKey" translatable="false">dark</string>
    <string name="followSystemKey" translatable="false">followSystem</string>

    <string name="cardTypeKey" translatable="false">cardType</string>
    <string name="elevatedKey" translatable="false">elevated</string>
    <string name="flatKey" translatable="false">flat</string>

    <string name="maxItemsToDisplayInListKey" translatable="false">maxItemsToDisplayInList</string>
    <string name="maxLinesToDisplayInNoteKey" translatable="false">maxLinesToDisplayInNote</string>

    <string name="showDateCreatedKey" translatable="false">showDateCreated</string>

    <string name="four" translatable="false">4</string>
    <string name="eight" translatable="false">8</string>

    <string name="exportNotesToAFileKey" translatable="false">exportNotesToAFile</string>
    <string name="importNotesFromAFileKey" translatable="false">importNotesFromAFile</string>

    <string name="rateKey" translatable="false">rate</string>
    <string name="githubKey" translatable="false">github</string>
    <string name="librariesKey" translatable="false">libraries</string>
</resources>