<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@+id/NotesFragment">

    <fragment
        android:id="@+id/NotesFragment"
        android:name="tech.acruxsolutions.atomnote.fragments.Notes"
        android:label="@string/app_name">

        <action
            android:id="@+id/NotesFragmentToSearchFragment"
            app:destination="@id/SearchFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/LabelsFragment"
        android:name="tech.acruxsolutions.atomnote.fragments.Labels"
        android:label="@string/labels">
        <action
            android:id="@+id/LabelsFragmentToDisplayLabel"
            app:destination="@id/DisplayLabelFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/DeletedFragment"
        android:name="tech.acruxsolutions.atomnote.fragments.Deleted"
        android:label="@string/deleted" />

    <fragment
        android:id="@+id/ArchivedFragment"
        android:name="tech.acruxsolutions.atomnote.fragments.Archived"
        android:label="@string/archived" />

    <fragment
        android:id="@+id/SettingsFragment"
        android:name="tech.acruxsolutions.atomnote.fragments.Settings"
        android:label="@string/settings" />

    <fragment
        android:id="@+id/SearchFragment"
        android:name="tech.acruxsolutions.atomnote.fragments.Search" />

    <fragment
        android:id="@+id/DisplayLabelFragment"
        android:name="tech.acruxsolutions.atomnote.fragments.DisplayLabel">
        <argument
            android:name="SelectedLabel"
            app:argType="string" />
    </fragment>

</navigation>